--- a/lib/petal_web/templates/page/index.html.heex
+++ b/lib/petal_web/templates/page/index.html.heex
@@ -1,3 +1,3 @@
-<section class="text-blue-500 text-center">
-  <p x-data="{message: 'Hello, It Works!'}" x-text="message">Doesn't Work!</p>
-</section>
+<div class="flex w-screen h-screen justify-center items-center">
+  <img src={Routes.static_path(@conn, "/images/phoenix.png")} alt="Phoenix Logo"/>
+</div>
