--- a/lib/petal_web/templates/layout/live.html.heex
+++ b/lib/petal_web/templates/layout/live.html.heex
@@ -1,9 +1,19 @@
-<main class="container">
-  <p class="alert alert-info" role="alert"
+<.container class="my-10">
+  <.alert
+    color="info"
+    class="mb-5"
+    label={live_flash(@flash, :info)}
     phx-click="lv:clear-flash"
-    phx-value-key="info"><%= live_flash(@flash, :info) %></p>
-  <p class="alert alert-danger" role="alert"
+    phx-value-key="info"
+  />
+
+  <.alert
+    color="danger"
+    class="mb-5"
+    label={live_flash(@flash, :error)}
     phx-click="lv:clear-flash"
-    phx-value-key="error"><%= live_flash(@flash, :error) %></p>
+    phx-value-key="error"
+  />
+
   <%= @inner_content %>
-</main>
+</.container>
